# HeliBoard

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY_POLICY.md  README.md  build.gradle  build.gradle.kts  copilot.manifest.json  gradle.properties  layouts.md  morekeys_reader.py  progress.md  release.py  settings.gradle
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: custom-colors.yml  custom-layout.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new-language-request.md  other.md  spell_checker.md
.github/workflows/: android-build.yml  build-debug-apk.yml  build-test-auto.yml
app/: build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/debug/: output-metadata.json
app/src/main/jni/: Android.bp  Android.mk  CMakeLists.txt  NativeFileList.mk  com_android_inputmethod_keyboard_ProximityInfo.cpp  com_android_inputmethod_latin_BinaryDictionary.cpp  com_android_inputmethod_latin_DicTraverseSession.cpp  jni_common.cpp  org_inputmethod_keyboard_ProximityInfo.cpp  org_inputmethod_keyboard_ProximityInfo.h  org_inputmethod_latin_BinaryDictionary.cpp  org_inputmethod_latin_BinaryDictionary.h  org_inputmethod_latin_BinaryDictionaryUtils.cpp  org_inputmethod_latin_BinaryDictionaryUtils.h  org_inputmethod_latin_DicTraverseSession.cpp  org_inputmethod_latin_DicTraverseSession.h
app/src/main/jni/src/suggest/core/: suggest_options.h
conductor/: tracks.md
gradle/wrapper/: gradle-wrapper.properties
tools/: diacritics.py  layout_converter.py  morekeys_reader.py  release.py
(+4172 files in other folders)
